--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "react": "^16.11.0",
-    "react-dom": "^16.11.0",
+    "react-dom": "^16.11.0"
+  },
+  "devDependencies": {
     "react-scripts": "3.2.0"
   },
   "scripts": {
